# tilt-orchestrator

./: CHANGELOG.md  README.md  README_TESTS.md  components.json  index.html  package-lock.json  package.json  prettier.config.cjs  splashscreen.html  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
docs/: ADD_EXISTING_PROJECT_FEATURE.md  TILT_EDITOR_PATH_CONFIGURATION.md  TILT_INSTALLATION_CHECK.md
public/: splashscreen.html
scripts/: prepare-release.sh
src/: App.css  App.tsx  api.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app_state/: mod.rs  model.rs  store.rs
src-tauri/src/backend/: dependency_graph.rs  errors.rs  generator.rs  generator_tests.rs  git.rs  ipc.rs  mod.rs  ports.rs  project.rs  project_manager.rs.txt  project_manager_tests.rs  tilt_manager.rs  tilt_manager_tests.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/project/: mod.rs  paths.rs  store.rs
src-tauri/src/tray_icon/: mod.rs  tray_manager.rs
src/api/: api.ts  tray.ts
src/components/: About.tsx  AddServiceDialog.tsx  ConfigureExistingProject.tsx  CreateProjectForm.tsx  EnvVarEditor.tsx  LandingScreen.tsx  ProjectManagement.tsx  ProjectView.tsx  ServiceCard.tsx  Settings.tsx  ThemeProvider.tsx  ThemeToggle.tsx  TiltControls.tsx
src/providers/: AppStateProvider.tsx  (+2 more)
src/types/: app.ts  (+2 more)
(+8 files in other folders)
