[package]
name = "tilt-orchestrator"
version = "0.1.0"
description = "Tilt Orchestrator"
authors = ["Okojie George"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tilt_orchestrator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.17"
chrono = "0.4"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

[dev-dependencies]
tempfile = "3.17"
tokio-test = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
